@@ -2,11 +2,7 @@ package com.datastax.spark.connector.cql
 
 import com.datastax.driver.core.{AuthProvider, PlainTextAuthProvider}
 import com.datastax.spark.connector.util.ReflectionUtil
-import org.apache.cassandra.thrift.{TFramedTransportFactory, ITransportFactory, AuthenticationRequest, Cassandra}
-import org.apache.cassandra.thrift.Cassandra.Iface
 import org.apache.spark.SparkConf
-
-import scala.collection.JavaConversions._
 
 /** Stores credentials used to authenticate to a Cassandra cluster and uses them
   * to configure a Cassandra connection.
@@ -19,35 +15,22 @@ trait AuthConf extends Serializable {
   /** Returns auth provider to be passed to the `Cluster.Builder` object. */
   def authProvider: AuthProvider
 
-  /** Returns the transport factory for creating thrift transports.
-    * Some authentication mechanisms like SASL require custom thrift transport.
-    * To be removed in the near future, when the dependency from Thrift will be completely dropped. */
-  def transportFactory: ITransportFactory
-
-  /** Sets appropriate authentication options for Thrift connection.
-    * To be removed in the near future, when the dependency from Thrift will be completely dropped. */
-  def configureThriftClient(client: Cassandra.Iface)
-
+  /** Returns auth credentials to be set in the Thrift authentication request. */
+  def thriftCredentials: Map[String, String]
 }
 
 /** Performs no authentication. Use with `AllowAllAuthenticator` in Cassandra. */
 case object NoAuthConf extends AuthConf {
-  def authProvider = AuthProvider.NONE
-  def transportFactory = new TFramedTransportFactory
-  def configureThriftClient(client: Iface) {}
+  override def authProvider = AuthProvider.NONE
 
+  override def thriftCredentials: Map[String, String] = Map.empty
 }
 
 /** Performs plain-text password authentication. Use with `PasswordAuthenticator` in Cassandra. */
 case class PasswordAuthConf(user: String, password: String) extends AuthConf {
+  override def authProvider = new PlainTextAuthProvider(user, password)
 
-  def authProvider = new PlainTextAuthProvider(user, password)
-  def transportFactory = new TFramedTransportFactory
-
-  def configureThriftClient(client: Iface) = {
-    val authRequest = new AuthenticationRequest(Map("username" -> user, "password" -> password))
-    client.login(authRequest)
-  }
+  override def thriftCredentials: Map[String, String] = Map("username" -> user, "password" -> password)
 }
 
 /** Obtains authentication configuration by reading  `SparkConf` object. */
